[package]
name = "seedling"
version = "1.0.0"
edition = "2021"
authors = ["Terah <terah.dev@gmail.com"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/terahlunah/seedling"
repository = "https://github.com/terahlunah/seedling"
keywords = ["rng", "random","tree", "prng", "seed"]

[dependencies]
rand_core = "^0.6.4"
rand_pcg = "^0.3.1"