[package]
name = "seedling"
version = "1.1.0"
edition = "2024"
authors = ["Terah <terah.dev@gmail.com"]
description = "A Rust crate for hierarchical seeded pseudo-random number generators."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/terahlunah/seedling"
repository = "https://github.com/terahlunah/seedling"
keywords = ["rng", "random", "tree", "prng", "seed"]

[dependencies]
rand_core = "^0.9.1"
rand_pcg = "^0.9.0"